--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 95%;
+  margin: 0 auto;
 }
-
+.app {
+  margin: 50px 0 0 0;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.app .main-content {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0 0 0;
 }
