--- a/my-app/src/components/user-list/user-list.css
+++ b/my-app/src/components/user-list/user-list.css
@@ -51,7 +51,7 @@
     width: 65%;
 }
 
-.all-list-user .list-user-item {
+.all-list-user .list-user-item > div{
     display: flex;
     justify-content: space-between;
     cursor: pointer;
